chore: add notes